# Intendant

./: .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  Cargo.toml  README.md  SysPrompt.md  SysPromptLiveAudio.md  SysPrompt_implementation.md  SysPrompt_orchestrator.md  SysPrompt_presence.md  SysPrompt_research.md  SysPrompt_tools.md  SysPrompt_user.md  build.rs  current_date.py
.cargo/: audit.toml  config.toml
.claude/skills/voice-e2e/: SKILL.md
.github/workflows/: audit.yml  docs.yml
.intendant/: codex-managed-instructions.md
crates/presence-core/: Cargo.toml
crates/presence-core/prompts/: SysPrompt_presence.md
crates/presence-core/src/: dispatch.rs  format.rs  lib.rs  prompt.rs  tools.rs  types.rs  wasm.rs
crates/presence-web/src/: app_state.rs  app_web.rs  callbacks.rs  gemini.rs  lib.rs  openai.rs  secondary.rs  server.rs
crates/station-web/: Cargo.toml
crates/station-web/src/: gpu.rs  hud.rs  input.rs  lib.rs  model.rs  scene.rs  util.rs
docs/: book.toml  design-federated-input-authority.md  design-tile-streaming.md  smoke-display.md
docs/src/: SUMMARY.md  architecture.md  computer-use-and-audio.md  configuration.md  control-plane-and-daemon.md  display-pipeline.md  external-agent-orchestration.md  getting-started.md  integrations.md  introduction.md  mcp-server.md  multi-agent.md  peer-federation.md  presence.md  runtime-protocol.md  session-logging.md  tui.md  web-dashboard.md  windows-support.md
examples/: damage-trace.rs
macos-app/: AppIcon.icns  main.swift
scripts/: bh-bridge.rs  bundle-macos.sh  codex_north_star_loop.sh  intendant-ctl.sh  intendant-ws.py  setup-lan-guest-macos.sh  setup-lan-macos.sh  setup-lan.bat  setup-lan.ps1  setup-lan.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1  validate-connect-bootstrap.cjs  validate-connect-hosted-mvp.cjs  validate-connect-rendezvous.cjs  validate-dashboard-control-local-signaling.cjs  validate-dashboard.cjs  validate-peer-file-transfer-webrtc.cjs
scripts/benchmarks/: codex_managed_benchmark_2026-06-12.md  harbor_intendant_codex_agent.py  managed_density_report.py  rollout_replay.py  summarize_harbor_results.py
scripts/benchmarks/fixtures/density_replay/managed-trial/: result.json
scripts/benchmarks/fixtures/density_replay/vanilla-trial/: result.json
scripts/benchmarks/longcli/: PILOT-SET.md  README.md  RUN-COMMANDS.md  assemble_density_trials.py  fetch-longcli.sh  posthoc_probe_runner.sh  tb-codex-setup.sh.j2  tb-intendant-setup.sh.j2  tb_intendant_codex_agent.py  tb_persistent_codex_agent.py
scripts/benchmarks/probes/: grade_probes.py  inject_probes.py
skills/e2e/: SKILL.md
skills/intendant-cli/: SKILL.md
skills/phone-call/: SKILL.md
skills/recording-e2e/: SKILL.md
skills/tui-e2e/: SKILL.md
skills/visual-collaboration/: SKILL.md
skills/voice-call-app/: SKILL.md
skills/voice-e2e/: SKILL.md
skills/wayland-portal-e2e/: SKILL.md
skills/web-e2e/: SKILL.md
src/: agent.rs  error.rs  main.rs  models.rs  status_monitor.rs  utils.rs
static/: app.html  audio-playback-processor.js  audio-processor.js  live.html  voice.html
static/wasm-station/: package.json  station_web.d.ts  station_web.js  station_web_bg.wasm  station_web_bg.wasm.d.ts
static/wasm-web/: presence_web.d.ts  presence_web.js  presence_web_bg.wasm  presence_web_bg.wasm.d.ts
tests/: test_gemini_live_frames.py  test_gemini_live_image.py
tests/e2e/: harness.rs  main.rs  test_basic.rs  test_control_socket.rs  test_voice.rs  test_web.rs  webrtc_signaling.rs
tests/skills/codex-context-stress/: SKILL.md
tests/skills/codex-fission-e2e/: SKILL.md
tests/skills/fission-eval-tasks/: README.md  SMOKE.md
tests/skills/fission-eval-tasks/polyglot-pipeline/: HARDENING.md  SKILL.md  TASK.md  verify.sh
tests/skills/fission-eval-tasks/polyglot-pipeline/reference/: README.md
tests/skills/fission-eval-tasks/polyglot-pipeline/reference/dedup/: Cargo.toml
tests/skills/fission-eval-tasks/polyglot-pipeline/reference/dedup/src/: main.rs
tests/skills/fission-eval-tasks/polyglot-pipeline/reference/normalizer/: normalize.py
tests/skills/fission-eval-tasks/polyglot-pipeline/reference/quarantine/: quarantine.py
tests/skills/fission-eval-tasks/polyglot-pipeline/reference/report/: report.sh
tests/skills/fission-eval-tasks/polyglot-pipeline/skeleton/: .gitignore  Makefile  README.md
tests/skills/fission-eval-tasks/polyglot-pipeline/skeleton/dedup/: Cargo.toml  SPEC.md
tests/skills/fission-eval-tasks/polyglot-pipeline/skeleton/normalizer/: SPEC.md  normalize.py
tests/skills/fission-eval-tasks/polyglot-pipeline/skeleton/quarantine/: SPEC.md  quarantine.py
tests/skills/fission-eval-tasks/polyglot-pipeline/skeleton/report/: SPEC.md  report.sh
tests/skills/fission-eval-tasks/polyglot-pipeline/verify/: grade.py  oracle.py
tests/skills/fission-eval-tasks/service-triplet/: HARDENING.md  SKILL.md  TASK.md  verify.sh
tests/skills/fission-eval-tasks/service-triplet/reference/: README.md
tests/skills/fission-eval-tasks/service-triplet/reference/api/: server.py
tests/skills/fission-eval-tasks/service-triplet/reference/cli/: client.py
tests/skills/fission-eval-tasks/service-triplet/reference/metrics/: metrics.py
tests/skills/fission-eval-tasks/service-triplet/reference/worker/: worker.py
tests/skills/fission-eval-tasks/service-triplet/skeleton/: Makefile  README.md
tests/skills/fission-eval-tasks/service-triplet/skeleton/api/: SPEC.md  server.py
tests/skills/fission-eval-tasks/service-triplet/skeleton/cli/: SPEC.md  client.py
tests/skills/fission-eval-tasks/service-triplet/skeleton/metrics/: SPEC.md  metrics.py
tests/skills/fission-eval-tasks/service-triplet/skeleton/worker/: SPEC.md  worker.py
tests/skills/fission-eval-tasks/service-triplet/verify/: grade.py  oracle.py  ref_api.py
tests/skills/fission-eval-tasks/trigger-ab/: PROTOCOL.md
tests/skills/fission-eval-tasks/trigger-ab/arm-b/: codex-managed-instructions.md
tests/skills/recording-e2e/: SKILL.md
tests/skills/tui-e2e/: SKILL.md
tests/skills/voice-e2e/: SKILL.md
tests/skills/web-e2e/: SKILL.md
(+12 files in other folders)
