[workspace]
members = [".", "crates/presence-core", "crates/presence-web", "crates/station-web"]

[package]
name = "intendant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intendant-runtime"
path = "src/main.rs"

[[bin]]
name = "intendant"
path = "src/bin/caller/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
env_logger = "0.9"
regex = "1.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
html2text = "0.12"
portable-pty = "0.8"
dotenvy = "0.15"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
# Used by upload_store for atomic-rename of streamed uploads into the final
# store location, and by tests elsewhere as a dev-dep.
tempfile = "3"
async-trait = "0.1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
tokio-stream = "0.1"
futures-util = "0.3"
dirs = "6"
rmcp = { version = "0.16", features = ["server", "transport-io", "client", "transport-child-process"] }
schemars = "1"
base64 = "0.22"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
# rustls dep (matched to tokio-tungstenite 0.24's transitive version) so
# we can build a `ClientConfig` with a custom `ServerCertVerifier` for
# the `PinnedMutualTls` transport-auth variant. Same `ClientConfig` is
# also passed to reqwest via `use_preconfigured_tls` so the agent-card
# fetch path enforces pinning consistently with the WebSocket path.
rustls = "0.23"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tokio-util = { version = "0.7", features = ["rt"] }
presence-core = { path = "crates/presence-core" }
libc = "0.2"
# Used by `find_available_port` / `bind_dual_stack_or_v4` to flip
# IPV6_V6ONLY off before bind — tokio's `TcpSocket` doesn't expose
# that knob, and macOS defaults it to true so an IPv6 bind without
# this refuses IPv4 connections. Kept pinned to tokio 1.x's transitive
# version so there's no risk of dual copies in the dep tree.
socket2 = "0.6"
rtc = { version = "=0.9.0" }
bytes = "1"
env-libvpx-sys = { version = "5.1", features = ["generate"] }
agent-client-protocol-schema = "0.11.5"
openssl = "0.10"
openssl-sys = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
similar = "2"
sha2 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
ashpd = { version = "0.11", features = ["tokio"] }
pipewire = "0.8"
x11rb = { version = "0.13", features = ["shm", "damage", "xfixes"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"
shiguredo_video_toolbox = "2026.1"

[profile.dev]
split-debuginfo = "unpacked"

[dev-dependencies]
# Enable tokio's `test-util` feature in test builds so `#[tokio::test(start_paused = true)]`
# and `tokio::time::advance` are available. Cargo merges features additively between
# [dependencies] and [dev-dependencies] for test/example builds — release builds still
# get just the `full` feature set from line 18.
tokio = { version = "1.0", features = ["test-util"] }
